--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     url: jdbc:mysql://localhost:3306/bookmarket?createDatabaseIfNotExists=true
     username: root
     password: root
+  jackson:
+    default-property-inclusion: non_null
 
